syntax = "proto3";

package greet;

option go_package = "github.com/ddcad2030/grpc-go/greet/proto";

service GreetService{
    rpc Greet(GreetRequest) returns(GreetResponse);
    rpc GreetManyTimes(GreetRequest) returns(stream GreetResponse);
    rpc GreetEveryOne(stream GreetRequest) returns(stream GreetResponse);
}

message GreetRequest{
    string first_name = 1;
}

message GreetResponse{
    string result = 1;
}